# aws-rds-odbc

./: .clang-format  .clang-tidy  .gitignore  .vsconfig  CMakeLists.txt  README.md  codechecker.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: run_static_analysis.yml  run_unit_tests.yml
aws-rds-odbc.xcodeproj/: project.pbxproj
aws-rds-odbc.xcodeproj/xcshareddata/xcschemes/: aws-rds-odbc-ansi.xcscheme  aws-rds-odbc.xcscheme
docs/: BuildAndRunTests.md  BuildLibraryAndRunUnitTests.md  Documentation.md  InstallMicrosoftVisualStudio.md
docs/authentication/: auth_adfs_example.cpp  auth_iam_example.cpp  auth_okta_example.cpp  auth_secrets_manager_example.cpp  authentication.md
docs/limitless/: limitless.md  limitless_example.cpp
scripts/: build_aws_sdk_linux.sh  build_aws_sdk_macos  build_aws_sdk_unix.sh  build_aws_sdk_win.ps1
src/: host_info.cc  host_info.h
src/authentication/: authentication_provider.cc  authentication_provider.h  federation.cc  federation.h  html_util.cc  html_util.h  secrets_manager_helper.cc  secrets_manager_helper.h
src/authentication/adfs/: adfs.cc  adfs.h
src/authentication/okta/: okta.cc  okta.h
src/dialect/: dialect.h  dialect_aurora_postgres.h
src/failover/: cluster_topology_info.cc  cluster_topology_info.h  cluster_topology_monitor.cc  cluster_topology_monitor.h  cluster_topology_query_helper.cc  cluster_topology_query_helper.h  failover_service.cc  failover_service.h  host_info.h
src/host_availability/: host_availability_strategy.h  simple_host_availability_strategy.cc  simple_host_availability_strategy.h
src/host_selector/: highest_weight_host_selector.cc  highest_weight_host_selector.h  host_selector.h  random_host_selector.cc  random_host_selector.h  round_robin_host_selector.cc  round_robin_host_selector.h  round_robin_property.h
src/limitless/: limitless_monitor_service.cc  limitless_monitor_service.h  limitless_query_helper.cc  limitless_query_helper.h  limitless_router_monitor.cc  limitless_router_monitor.h
src/util/: cache_map.cc  cache_map.h  cluster_topology_helper.cc  cluster_topology_helper.h  connection_string_helper.cc  connection_string_helper.h  connection_string_keys.h  logger_wrapper.cc  logger_wrapper.h  odbc_helper.cc  odbc_helper.h  rds_logger_service.cc  rds_logger_service.h  rds_utils.cc  rds_utils.h  sliding_cache_map.cc  sliding_cache_map.h  string_helper.h  string_to_number_converter.cc  string_to_number_converter.h  text_helper.h
test/integration_test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt  adfs_test.cc  authentication_provider_test.cc  cluster_topology_info_test.cc  host_info_test.cc  main.cc  mock_objects.h
test/unit_test/authentication/: authentication_provider_test.cc  secrets_manager_helper_test.cc
test/unit_test/authentication/adfs/: adfs_test.cc
test/unit_test/authentication/okta/: okta_test.cc
test/unit_test/aws-rds-odbc-unit-tests.xcodeproj/: project.pbxproj
test/unit_test/aws-rds-odbc-unit-tests.xcodeproj/xcshareddata/xcschemes/: aws-rds-odbc-unit-tests-ansi.xcscheme  aws-rds-odbc-unit-tests-unicode.xcscheme  aws-rds-odbc-unit-tests.xcscheme
test/unit_test/failover/: cluster_topology_info_test.cc  cluster_topology_monitor_test.cc  cluster_topology_query_helper_test.cc  failover_service_test.cc
test/unit_test/host_availability/: simple_host_availability_strategy_test.cc
test/unit_test/host_selector/: highest_weight_host_selector_test.cc  random_host_selector_test.cc  round_robin_host_selector_test.cc
test/unit_test/limitless/: limitless_monitor_service_test.cc
test/unit_test/util/: cache_map_test.cc  connection_string_helper_test.cc  logger_wrapper_test.cc  odbc_helper_test.cc  rds_utils_test.cc  sliding_cache_map_test.cc  string_to_number_converter_test.cpp
